feat: Add GitHub Actions workflow for deploying to GitHub Pages
- Created a new workflow file `.github/workflows/deploy.yml` to automate deployment to GitHub Pages.
- The workflow includes steps for checking out the repository, setting up Node.js, installing dependencies, building the project, and deploying the build output.

style: Refactor app.css to remove theme variables

- Removed theme variables and unnecessary styles from `app/app.css`.

feat: Implement area conversion calculator in home.tsx

- Added state management for hectare, bigha, and biswa conversions.
- Implemented input handling for area conversions and settings management.
- Created a user interface for area conversion with input fields and settings.

feat: Add utility function for class name merging

- Introduced `cn` function in `app/utils/index.ts` to merge class names using `clsx` and `tailwind-merge`.

refactor: Remove unused logo SVGs

- Deleted `logo-dark.svg` and `logo-light.svg` from the `app/welcome` directory.

refactor: Simplify Welcome component

- Updated `Welcome` component to display a simple "Hello World" message instead of the previous layout.

chore: Update package.json and package-lock.json

- Added `clsx` and `tailwind-merge` as dependencies in `package.json`.
- Updated `package-lock.json` to reflect the new dependencies.

fix: Set SSR to false in react-router.config.ts

- Changed server-side rendering configuration to false in `react-router.config.ts`.

chore: Ensure base path is set in vite.config.ts

- Confirmed the base path is set to `/areacalculater/` in `vite.config.ts`.

fix: Update favicon.ico

- Updated the favicon.ico file in the public directory.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "areacalculater",
   "private": true,
   "type": "module",
+  "homepage": "https://shyamkumaryadav.github.io/areacalculater",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
@@ -11,10 +12,12 @@
   "dependencies": {
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
