--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy to GitHub Pages
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
 
 permissions:
   contents: read
@@ -17,7 +20,6 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
           cache: "npm"
 
       - name: Install dependencies
